removing the blank rows for reference rows as placement is too complicated and fragile. Moving standard errors to own line

--- a/3_working_paper_outputs_10hrs.qmd
+++ b/3_working_paper_outputs_10hrs.qmd
@@ -21,6 +21,8 @@ Read in our working dataset created in data_prep.qmd
 rm(list = ls())
 library(tidyverse)
 library(lme4)
+library(bit64)
+
 
 se_sample <- readRDS("se_sample_5_10hrs_cleanest.rds") 
 ```
@@ -777,25 +779,6 @@ coef_map <- build_coef_map_ordered(list(unemp_m1_plm,
 ```
 
 
-Adding reference category rows
-```{r}
-rows_to_add <- tribble(
-  ~term, ~m1, ~m2, ~m3, ~m4, ~m5, ~m6, ~m7, ~m8, ~m9, ~m10,
-  "Employed (Reference)", "", "", "", "", "", "", "", "", "", "", #1
-  "White (Reference)", "", "", "", "", "", "", "", "", "", "", #3
-  "Prior Industry Experience: No (Reference)", "", "", "", "", "", "", "", "", "", "", #5
-  "Male (Reference)", "", "", "", "", "", "", "", "", "", "", # 8
-  "US Born (Reference)", "", "", "", "", "", "", "", "", "", "", #12
-  "Not Married (Reference)", "", "", "", "", "", "", "", "", "", "", #14
-  "Not Parent(Reference)", "", "", "", "", "", "", "", "", "", "", #16
-  "High School or Less (Reference)", "", "", "", "", "", "", "", "", "", "", # 18
-  "Professional, Scientific, and Management, and Administrative, and Waste Management Services (Reference)", "", "", "", "", "", "", "", "", "", "", 
-  "Calendar Year: 2014 (Reference)", "", "", "", "", "", "", "", "", "", "" 
-  )
-attr(rows_to_add, 'position') <- c(1, 3, 5, 8, 12, 14, 16, 18, 23, 36)
-```
-
-
 ```{r}
 tbl4_unemp_models_rse <- modelsummary(list(unemp_m1_plm,
                                            unemp_m2_plm, 
@@ -808,10 +791,9 @@ tbl4_unemp_models_rse <- modelsummary(list(unemp_m1_plm,
                                            unemp_m9_plm,
                                            unemp_m10_plm), 
                                       coef_map = coef_map,
-                                      add_rows = rows_to_add,
-                                      estimate = "{estimate} ({std.error}){stars}",
+                                      estimate = "{estimate}{stars}",
                                       vcov = "robust",
-                                      statistic = NULL,
+                                      statistic = "({std.error})",
                                       title = "Table 4 Robust SE Unemployment predicting Log Annual Earnings", 
                                       output = "huxtable",
                                        notes = "Significance levels: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001")
@@ -879,23 +861,6 @@ coef_map_status <- build_coef_map_ordered(list(status_m1_plm,
 ```
 
 
-Adding reference category rows
-```{r}
-rows_to_add_status <- tribble(
-  ~term, ~m1, ~m2, ~m3, ~m4, ~m5, ~m6, ~m7, ~m8, ~m9, ~m10,
-  "Wage & Salary (Reference)", "", "", "", "", "", "", "", "", "", "", #1
-  "White (Reference)", "", "", "", "", "", "", "", "", "", "", #3
-  "Prior Industry Experience: No (Reference)", "", "", "", "", "", "", "", "", "", "", #5
-  "Male (Reference)", "", "", "", "", "", "", "", "", "", "", # 8
-  "US Born (Reference)", "", "", "", "", "", "", "", "", "", "", #12
-  "Not Married (Reference)", "", "", "", "", "", "", "", "", "", "", #14
-  "Not Parent(Reference)", "", "", "", "", "", "", "", "", "", "", #16
-  "High School or Less (Reference)", "", "", "", "", "", "", "", "", "", "", # 18
-  "Professional, Scientific, and Management, and Administrative, and Waste Management Services (Reference)", "", "", "", "", "", "", "", "", "", "", 
-  "Calendar Year: 2014 (Reference)", "", "", "", "", "", "", "", "", "", "" 
-  )
-attr(rows_to_add_status, 'position') <- c(1, 4, 6, 10, 14, 16, 18, 20, 25, 38)
-```
 
 
 ```{r}
@@ -910,10 +875,9 @@ tbl5_status_models_rse <- modelsummary(list(status_m1_plm,
                                            status_m9_plm,
                                            status_m10_plm), 
                                       coef_map = coef_map_status,
-                                      add_rows = rows_to_add_status,
-                                      estimate = "{estimate} ({std.error}){stars}",
+                                      estimate = "{estimate}{stars}",
                                       vcov = "robust",
-                                      statistic = NULL,
+                                      statistic = "({std.error})",
                                       title = "Table 5 Robust SE Y1 Status predicting Log Annual Earnings", 
                                       output = "huxtable",
                                       notes = "Significance levels: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001")
@@ -994,10 +958,9 @@ tbl6_unemp_models_rse <- modelsummary(list(unemp3_m1_plm,
                                            unemp3_m9_plm,
                                            unemp3_m10_plm), 
                                       coef_map = coef_map_unemp3,
-                                      add_rows = rows_to_add, # safe to use the original rows here 
-                                      estimate = "{estimate} ({std.error}){stars}",
+                                      estimate = "{estimate}{stars}",
                                       vcov = "robust",
-                                      statistic = NULL,
+                                      statistic = "({std.error})",
                                       title = "Table 6 Robust SE Unemployment 3+ predicting Log Annual Earnings", 
                                       output = "huxtable",
                                        notes = "Significance levels: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001")
@@ -1040,12 +1003,10 @@ tbl7_unemp_ws_models <- modelsummary(list(unemp_ws_m1,
                                           unemp_ws_m8,
                                           unemp_ws_m9,
                                           unemp_ws_m10), 
-                                     ## safe to use the original coef_map and rows_to add since only the sample has changed for this one
                                       coef_map = coef_map,
-                                      add_rows = rows_to_add,
-                                      estimate = "{estimate} ({std.error}){stars}",
+                                      estimate = "{estimate}{stars}",
                                       vcov = "robust",
-                                      statistic = NULL,
+                                      statistic = "({std.error})",
                                       title = "Table 7 Unemployment predicting Log Annual Earnings", 
                                       output = "huxtable",
                                        notes = "Significance levels: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001")
@@ -1109,7 +1070,6 @@ tbl4_unemp_hlm <- modelsummary(list(unemp_m1_hlm,
                                     unemp_m9_hlm,
                                     unemp_m10_hlm), 
                                coef_map = coef_map, 
-                               add_rows = rows_to_add, 
                                estimate = "{estimate} ({std.error}){stars}",
                                statistic = NULL,
                                title = "Table 4 HLM: Unemployment predicting Log Annual Earnings", 
@@ -1160,7 +1120,6 @@ tbl5_status_hlm <- modelsummary(list(status_m1_hlm,
                                      status_m9_hlm,
                                      status_m10_hlm), 
                                 coef_map = coef_map_status, 
-                                add_rows = rows_to_add_status,
                                 estimate = "{estimate} ({std.error}){stars}",
                                 statistic = NULL,
                                 title = "Table 5 HLM: Y1 Status predicting Log Annual Earnings", 
@@ -1212,7 +1171,6 @@ tbl6_unemp3_hlm <- modelsummary(list(unemp3_m1_hlm,
                                     unemp3_m9_hlm,
                                     unemp3_m10_hlm), 
                                coef_map = coef_map_unemp3, 
-                               add_rows = rows_to_add, 
                                estimate = "{estimate} ({std.error}){stars}",
                                statistic = NULL,
                                title = "Table 6 HLM: 3-month Unemployment predicting Log Annual Earnings", 
